# my_corecoder

./: .env.example  .gitignore  .mcp.json  LICENSE  Makefile  README.md  main.py  pyproject.toml
.corecoder/skills/humanizer/: SKILL.md
.github/workflows/: ci.yml
app/: agent.py  cancellation.py  cli.py  commands.py  config.py  context.py  debug.py  events.py  file_journal.py  llm.py  logging_config.py  main.py  mcp_adapter.py  mcp_client.py  mcp_config.py  permission.py  prompt.py  run_context.py  runlog.py  runtime_state.py  session.py  skills.py  todo.py  todo_printer.py  trace.py  utils.py  web_main.py
app/tools/: __init__.py  agent.py  base.py  bash.py  edit.py  glob.py  glob_tool.py  grep.py  now.py  read.py  search.py  skill.py  time.py  time_tool.py  todo.py  write.py
app/web/: event_bridge.py  server.py  session.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  config.js  style.css
frontend/src/components/: ChatPanel.vue  PermissionDialog.vue  Sidebar.vue
frontend/src/utils/: messageFormat.js
tests/: test_agent_parallel.py  test_agent_tool.py  test_agent_tool_timeout.py  test_bash.py  test_config.py  test_context.py  test_edit.py  test_file_journal.py  test_file_journal_integration.py  test_grep.py  test_llm.py  test_mcp_timeout.py  test_permission.py  test_read.py  test_run_context.py  test_search.py  test_sessions.py  test_web_session.py
