[project]
name = "my-corecoder"
version = "0.1.0"
description = "从零构建的安全优先 AI 编程助手 — 支持终端/Web 双模式，事件驱动架构，集成 MCP 协议"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "mcp>=1.27,<2",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "ruff>=0.15.20",
    "uvicorn[standard]>=0.49.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    ".venv",
    "__pycache__",
    "alembic",
    "skills",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
